--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
+    "jose": "^6.1.0",
     "lucide-react": "^0.543.0",
+    "mongodb": "^6.19.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
